<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>head_recovery</name>
    <version>1.0.0</version>
    <description>

        This package provides a recovery behavior for the navigation stack that that performs a predefined head and torso movement for some time, to clear out voxels.

    </description>
    <author>Konstantinos Karapas</author>
    <maintainer email="konstantinos.karapas@iit.it">Konstantinos Karapas</maintainer>
    <license>BSD</license>
    <url>https://github.com/DatSpace/r1-navigation-head-recovery</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>

    <depend>costmap_2d</depend>
    <depend>eigen</depend>
    <depend>nav_core</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>

    <export>
        <nav_core plugin="${prefix}/head_plugin.xml" />
    </export>

</package>
